# contract_intake_automation

./: setup.py
contract_download_bot/: ContractDownloadBot.1.0.1.nupkg  ContractDownloadBot.1.0.2.nupkg
contract_intake_agents/: README.md  pyproject.toml
contract_intake_agents/src/contract_intake_agents/: crew.py  main.py  rpa_utils.py
contract_intake_agents/src/contract_intake_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
contract_intake_agents/src/contract_intake_agents/config/: agents.yaml  rpa_config.py  tasks.yaml
contract_intake_agents/src/contract_intake_agents/tools/: excel_writer_tool.py  json_to_excel_tool.py
contract_intake_agents/src/contract_intake_agents/utils/: uipath_runner.py
contract_output_upload_bot/: ContractOutputUploadBot.1.0.1.nupkg
db/: chroma.sqlite3
documentation/: Contract_Intake_Validation_SDD_Updated.docx
output/: vendor_abc_solutions_contract_email_summary.txt  vendor_abc_solutions_contract_extracted_contract_details.json  vendor_abc_solutions_contract_extracted_contract_details.xlsx  vendor_abc_solutions_contract_validation_report.json  vendor_abcxyz_contract_email_summary.txt  vendor_abcxyz_contract_extracted_contract_details.json  vendor_abcxyz_contract_extracted_contract_details.xlsx  vendor_abcxyz_contract_validated_contract_data.json  vendor_abcxyz_contract_validation_report.json  vendor_xyz_contract_email_summary.txt  vendor_xyz_contract_extracted_contract_details.json  vendor_xyz_contract_extracted_contract_details.xlsx  vendor_xyz_contract_validation_report.json
(+29 files in other folders)
