[project]
name = "contract_intake_agents"
version = "0.1.0"
description = "contract-intake-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
contract_intake_agents = "contract_intake_agents.main:run"
run_crew = "contract_intake_agents.main:run"
train = "contract_intake_agents.main:train"
replay = "contract_intake_agents.main:replay"
test = "contract_intake_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
